colophon alignment fixed

--- a/src/siyavula.app/siyavula/app/static/main.css
+++ b/src/siyavula.app/siyavula/app/static/main.css
@@ -114,9 +114,14 @@ a {
 }
 
 .colophon {
-    padding: 18px 0 0 40px;
+    padding: 18px 0 0 34px;
     vertical-align: middle;
     color:white;
+    line-height: 2em;
+}
+
+.colophon img {
+    vertical-align: middle;
 }
 
 .heading_button {
